<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    tools:context=".login3">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textSize="16sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_btn" />

    <TextView
        android:id="@+id/login3_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/m_plus_1p_bold"
        android:text="@string/login3_text1"
        android:textColor="@color/text1_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login3_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/login3_text2"
        android:textColor="@color/text2_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/login3_text1"
        app:layout_constraintStart_toStartOf="@+id/login3_text1" />

    <TextView
        android:id="@+id/login3_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/m_plus_1p_bold"
        android:text="@string/login3_text3"
        android:textColor="@color/text2_color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login3_text2"
        app:layout_constraintStart_toStartOf="@+id/login3_text2" />
</androidx.constraintlayout.widget.ConstraintLayout>