<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    tools:context=".Login1">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/m_plus_1p_bold"
        android:text="@string/login1_text1"
        android:textColor="@color/text1_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/m_plus_1p_bold"
        android:text="@string/login1_text3"
        android:textColor="@color/text2_color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text22"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/login1_text2"
        android:textColor="@color/text2_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>