<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    tools:context=".login">

<!--    <Button-->
<!--        android:id="@+id/help_me_btn"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:background="@drawable/custom_button"-->
<!--        android:fontFamily="@font/montserrat_bold"-->
<!--        android:text="@string/forget_password"-->
<!--        android:textSize="16sp"-->
<!--        app:backgroundTint="@color/gray"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/continue_btn"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:textAllCaps="false" />-->

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cont"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/text1_color"
        app:layout_constraintBottom_toTopOf="@+id/forget_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/email"
        android:textColorHint="@color/light_gray"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:boxBackgroundColor="@color/gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password_text_layout"
        app:layout_constraintEnd_toEndOf="@+id/password_text_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_text_layout"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/m_plus_1p_bold"
        android:text="@string/welcome"
        android:textColor="@color/text2_color"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text_layout"
        app:layout_constraintStart_toStartOf="@+id/email_text_layout" />

    <TextView
        android:id="@+id/forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>